fix the issue to hero section and overflow

--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@
     
     background-size:contain;
     }
+    .hero-frist-back-img{
+     background-size: cover;
+    }
     
 }
 
